--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
     "js-cookie": "^3.0.5",
     "papaparse": "^5.5.2",
     "react": "^18.0.0",
