Stuff to run server in prod

--- a/package.json
+++ b/package.json
@@ -22,14 +22,17 @@
   "devDependencies": {
     "@vitejs/plugin-react": "^4.4.1",
     "autoprefixer": "^10.4.21",
+    "concurrently": "^9.2.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.1",
     "vite": "^6.3.5"
   },
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
+    "dev": "concurrently \"vite\" \"node server/index.js\"",
+    "build": "vite build && npm run postbuild",
     "postbuild": "rename dist\\index.html nichi.html",
+    "serve": "NODE_ENV=production node server/index.js",
+    "start": "npm run serve",
     "preview": "vite preview"
   },
   "eslintConfig": {
