--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react": "^18.0.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.0.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "zustand": "^5.0.7"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.4.1",
