--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "js-cookie": "^3.0.5",
+    "lucide-react": "^0.544.0",
     "papaparse": "^5.5.2",
     "react": "^18.0.0",
     "react-beautiful-dnd": "^13.1.1",
